--- a/src/index.html
+++ b/src/index.html
@@ -221,37 +221,37 @@
                 мобильный телефон</div>
 
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6 col-lg-4">
                     <div class="mobile_item mobile_item_1">
                         <div class="mobile_item_subtitle">оформление заказа одним касанием</div>
                         <div class="mobile_item_plus"></div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6 col-lg-4">
                     <div class="mobile_item mobile_item_2">
                         <div class="mobile_item_subtitle">надежная подача</div>
                         <div class="mobile_item_plus"></div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6 col-lg-4">
                     <div class="mobile_item mobile_item_3">
                         <div class="mobile_item_subtitle">прозрачные цены</div>
                         <div class="mobile_item_plus"></div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6 col-lg-4">
                     <div class="mobile_item mobile_item_4">
                         <div class="mobile_item_subtitle">безналичная оплата</div>
                         <div class="mobile_item_plus"></div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6 col-lg-4">
                     <div class="mobile_item mobile_item_5">
                         <div class="mobile_item_subtitle">обратная связь</div>
                         <div class="mobile_item_plus"></div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6 col-lg-4">
                     <div class="mobile_item mobile_item_6">
                         <div class="mobile_item_subtitle">разделить стоимость поездки</div>
                         <div class="mobile_item_plus"></div>
@@ -266,13 +266,14 @@
             <div class="label label_white">возможности</div>
             <div class="title title_white">Выбор - отличная штука!</div>
             <div class="subtitle subtitle_white">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
-            <div class="row"></div>
-            <div class="col-md-9 offset-md-1 col-xl-8 offset-xl-2">
-                <img src="img/car_bg.png" alt="car bg" class="possibilities_img">
-                <div class="col-md-4 offset-md-4">
-                    <div class="possibilities_text">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</div>
+            <div class="row">
+                <div class="col-md-12 col-lg-8 offset-lg-2">
+                    <img src="img/car_bg.png" alt="car bg" class="possibilities_img">
+                    <div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+                        <div class="possibilities_text">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси
+                        </div>
+                    </div>
                 </div>
-
             </div>
         </div>
     </section>
@@ -281,7 +282,7 @@
             <div class="label">возможности</div>
             <div class="title">условия и требования</div>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-12 col-lg-6">
                     <div class="conditions_requirements_item">
                         <div class="conditions_requirements_item_title"><span>условия</span>: со своим авто:</div>
                         <ul class="conditions_requirements_item_list">
@@ -298,7 +299,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-12 col-lg-6">
                     <div class="conditions_requirements_item">
                         <div class="conditions_requirements_item_title warning"><span>условия</span>: на авто компании:
                         </div>
@@ -309,7 +310,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-12 col-lg-6">
                     <div class="conditions_requirements_item warning">
                         <div class="conditions_requirements_item_title"><span>требование:</span></div>
                         <ul class="conditions_requirements_item_list">
@@ -321,7 +322,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-12 col-lg-6">
                     <div class="conditions_requirements_item warning">
                         <div class="conditions_requirements_item_title"><span>документы:</span></div>
                         <ul class="conditions_requirements_item_list">
