--- a/src/index.html
+++ b/src/index.html
@@ -26,11 +26,16 @@
                     <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
                 </ul>
             </div>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </nav>
         <div class="subheader">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 offset-md-1">
+                    <div class="col-6 col-md-4 offset-md-1">
                         <a href="#" class="subheader_logo">
                             <img src="icons/logo.png" alt="logo">
                         </a>
@@ -38,11 +43,12 @@
                             Официальный партнер Uber в Москве
                         </div>
                     </div>
-                    <div class="col-md-3 offset-md-1 col-xl-2 offset-xl-1">
+                    <div class="xs-hidden col-md-3 offset-md-1 col-xl-2 offset-xl-2">
                         <div class="subheader_call_text">Звоните нам ежедневно</div>
                         <a href="tel:+74957970988" class="subheader_call_number">8 495 797 09 88</a>
                     </div>
-                    <div class="col-md-3 col-xl-2">
+                    <div class="col-6 col-md-3">
+                        <a href="tel:+74957970988" class="xs-visible subheader_call_number">8 495 797 09 88</a>
                         <button class="subheader_btn">Заказать звонок</button>
                     </div>
                 </div>
@@ -221,37 +227,37 @@
                 мобильный телефон</div>
 
             <div class="row">
-                <div class="col-md-6 col-lg-4">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="mobile_item mobile_item_1">
                         <div class="mobile_item_subtitle">оформление заказа одним касанием</div>
                         <div class="mobile_item_plus"></div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="mobile_item mobile_item_2">
                         <div class="mobile_item_subtitle">надежная подача</div>
                         <div class="mobile_item_plus"></div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="mobile_item mobile_item_3">
                         <div class="mobile_item_subtitle">прозрачные цены</div>
                         <div class="mobile_item_plus"></div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="mobile_item mobile_item_4">
                         <div class="mobile_item_subtitle">безналичная оплата</div>
                         <div class="mobile_item_plus"></div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="mobile_item mobile_item_5">
                         <div class="mobile_item_subtitle">обратная связь</div>
                         <div class="mobile_item_plus"></div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="mobile_item mobile_item_6">
                         <div class="mobile_item_subtitle">разделить стоимость поездки</div>
                         <div class="mobile_item_plus"></div>
@@ -282,7 +288,7 @@
             <div class="label">возможности</div>
             <div class="title">условия и требования</div>
             <div class="row">
-                <div class="col-md-12 col-lg-6">
+                <div class="col-md-6">
                     <div class="conditions_requirements_item">
                         <div class="conditions_requirements_item_title"><span>условия</span>: со своим авто:</div>
                         <ul class="conditions_requirements_item_list">
@@ -299,7 +305,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-12 col-lg-6">
+                <div class="col-md-6">
                     <div class="conditions_requirements_item">
                         <div class="conditions_requirements_item_title warning"><span>условия</span>: на авто компании:
                         </div>
@@ -310,7 +316,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-12 col-lg-6">
+                <div class="col-md-6">
                     <div class="conditions_requirements_item warning">
                         <div class="conditions_requirements_item_title"><span>требование:</span></div>
                         <ul class="conditions_requirements_item_list">
@@ -322,7 +328,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-12 col-lg-6">
+                <div class="col-md-6">
                     <div class="conditions_requirements_item warning">
                         <div class="conditions_requirements_item_title"><span>документы:</span></div>
                         <ul class="conditions_requirements_item_list">
@@ -372,6 +378,9 @@
                         <a href="">блог</a>
                         <a href="">о нас</a>
                     </div>
+                    <div class="footer_language">
+                        <a href="#">русский</a>
+                    </div>
                 </div>
             </div>
             <div>
@@ -388,10 +397,8 @@
                 </div>
             </div>
         </div>
-        <div class="footer_language">
-            <a href="#">русский</a>
-        </div>
     </footer>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
