--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/0816f064cd.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="icons/taxi.ico" type="image/x-icon">
     <title>Uber</title>
 </head>
 
@@ -19,10 +20,10 @@
             <div class="container">
                 <ul class="menu">
                     <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
-                    <li class="menu_item"><a href="#" class="menu_link">Со своим автомобилем</a></li>
-                    <li class="menu_item"><a href="#" class="menu_link">На автомобиле компании</a></li>
-                    <li class="menu_item"><a href="#" class="menu_link">Требования</a></li>
-                    <li class="menu_item"><a href="#" class="menu_link">Контакты</a></li>
+                    <li class="menu_item"><a href="#require_self_auto" class="menu_link">Со своим автомобилем</a></li>
+                    <li class="menu_item"><a href="#require_our_auto" class="menu_link">На автомобиле компании</a></li>
+                    <li class="menu_item"><a href="#require" class="menu_link">Требования</a></li>
+                    <li class="menu_item"><a href="#contacts" class="menu_link">Контакты</a></li>
                     <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
                 </ul>
             </div>
@@ -283,14 +284,14 @@
             </div>
         </div>
     </section>
-    <section class="conditions_requirements">
+    <section class="conditions_requirements" id="require">
         <div class="container">
             <div class="label">возможности</div>
             <div class="title">условия и требования</div>
             <div class="row">
                 <div class="col-md-6">
                     <div class="conditions_requirements_item">
-                        <div class="conditions_requirements_item_title"><span>условия</span>: со своим авто:</div>
+                        <div class="conditions_requirements_item_title" id="require_self_auto"><span>условия</span>: со своим авто:</div>
                         <ul class="conditions_requirements_item_list">
                             <li>Подключаем к системе UBER под 10%.</li>
                             <li>Никаких взносов 0%!</li>
@@ -307,7 +308,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="conditions_requirements_item">
-                        <div class="conditions_requirements_item_title warning"><span>условия</span>: на авто компании:
+                        <div class="conditions_requirements_item_title warning" id="require_our_auto"><span>условия</span>: на авто компании:
                         </div>
                         <ul class="conditions_requirements_item_list">
                             <li>Предоставляем авто без залога</li>
@@ -353,7 +354,7 @@
             </div>
         </div>
     </section>
-    <footer class="footer">
+    <footer class="footer" id="contacts">
         <hr class="hr_footer">
         <div class="wrapper">
             <div>
