--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <script src="https://kit.fontawesome.com/0816f064cd.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="icons/taxi.ico" type="image/x-icon">
     <title>Uber</title>
