--- a/src/index.html
+++ b/src/index.html
@@ -84,139 +84,7 @@
             <h2 class="title">8 причин начать работать с нами</h2>
 
             <div class="row">
-
-                <div class="col-md-6">
-                    <div class="reasons_item">
-                        <div class="reasons_item_round">
-                            <img src="icons/reasons/cash_icon.png" alt="cash icon" class="reason_item_img">
-                        </div>
-
-                        <div class="reasons_item_descr">
-                            <p class="reasons_item_descr_title"> Никаких наличных, оплата происходит
-                                автоматически</p>
-                            <p class="reasons_item_descr_text"> Стоимость поездки оплачивается пассажиром с привязанной
-                                банковской карты, т.е. нет никаких рисков связанных с перевозкой наличности как для
-                                пассажира, так и для водителя, Вам не нужно искать мелкие деньги для размена.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-6">
-                    <div class="reasons_item">
-                        <div class="reasons_item_round">
-                            <img src="icons/reasons/chart_icon.png" alt="chart icon" class="reason_item_img">
-                        </div>
-
-                        <div class="reasons_item_descr">
-                            <p class="reasons_item_descr_title"> Комиссия 8% + БОНУСЫ</p>
-                            <p class="reasons_item_descr_text"> У нас минимальная комиссия и мы выплачиваем бонусы за
-                                каждую
-                                поездку, некоторые наши конкуренты оставляют бонусы себе. Мы работаем честно и с
-                                нами
-                                водители зарабатывают больше!</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-6">
-                    <div class="reasons_item">
-                        <div class="reasons_item_round">
-                            <img src="icons/reasons/money_icon.png" alt="money icon" class="reason_item_img">
-                        </div>
-
-                        <div class="reasons_item_descr">
-                            <p class="reasons_item_descr_title"> Высокий доход с гарантированными
-                                выплатами</p>
-                            <p class="reasons_item_descr_text"> Мы выплачиваем заработную плату на личную банковскую
-                                карту
-                                водителя! Вам не нужно оформлять ООО, ИП, платить налоги, подавать декларацию,
-                                оплачивать бухгалтерские услуги и ведение банковского счета.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-6">
-                    <div class="reasons_item">
-                        <div class="reasons_item_round">
-                            <img src="icons/reasons/calendar_icon.png" alt="calendar icon" class="reason_item_img">
-                        </div>
-
-                        <div class="reasons_item_descr">
-                            <p class="reasons_item_descr_title"> Работа в удобное время, никаких
-                                графиков</p>
-                            <p class="reasons_item_descr_text"> Вы просто нажимаете кнопку выйти на линию для начала
-                                работы,
-                                когда решите закончить, нажимаете выйти с линии. Вы можете подрабатывать только
-                                утром,
-                                вечером, в выходные или праздничные дни!</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-6">
-                    <div class="reasons_item">
-                        <div class="reasons_item_round">
-                            <img src="icons/reasons/key_icon.png" alt="key icon" class="reason_item_img">
-                        </div>
-
-                        <div class="reasons_item_descr">
-                            <p class="reasons_item_descr_title"> Комфортное, прозрачное и простое
-                                подключение</p>
-                            <p class="reasons_item_descr_text"> Мы подключаем дистанционно и бесплатно, Вам нет
-                                необходимости приезжать к нам! Вы
-                                присылаете нам копии документов, мы регистрируем Вас и присылаем данные для
-                                подключения, через 1-2 дня Вы можете начинать работать!</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-6">
-                    <div class="reasons_item">
-                        <div class="reasons_item_round">
-                            <img src="icons/reasons/map_icon.png" alt="map icon" class="reason_item_img">
-                        </div>
-
-                        <div class="reasons_item_descr">
-                            <p class="reasons_item_descr_title">Всегда большое количество заказов</p>
-                            <p class="reasons_item_descr_text"> Приложение показывает, где на данный момент больше всего
-                                заказов и где действуют повышенные тарифы. У Вас не будет простоя и холостых
-                                пробегов.
-                                Наши пассажиры всегда приятные и абсолютно неконфликтные люди, которых приятно
-                                возить.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-6">
-                    <div class="reasons_item">
-                        <div class="reasons_item_round">
-                            <img src="icons/reasons/support_icon.png" alt="support icon" class="reason_item_img">
-                        </div>
-
-                        <div class="reasons_item_descr">
-                            <p class="reasons_item_descr_title">Круглосуточная поддержка</p>
-                            <p class="reasons_item_descr_text"> В Uber действует круглосуточная поддержка водителей по
-                                электронной почте. Если что-то непонятно, Вы всегда можете задать вопрос через
-                                On-line
-                                консультацию.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-6">
-                    <div class="reasons_item">
-                        <div class="reasons_item_round">
-                            <img src="icons/reasons/car_icon.png" alt="car icon" class="reason_item_img">
-                        </div>
-
-                        <div class="reasons_item_descr">
-                            <p class="reasons_item_descr_title"> Без шашечек и наклеек</p>
-                            <p class="reasons_item_descr_text"> Вам не нужно менять цвет, устанавливать «шашки» на
-                                автомобиль
-                                и обклеивать его наклейками.</p>
-                        </div>
-                    </div>
-                </div>
+				<!-- generate from js -->
             </div>
         </div>
     </section>
@@ -228,42 +96,7 @@
                 мобильный телефон</div>
 
             <div class="row">
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4">
-                    <div class="mobile_item mobile_item_1">
-                        <div class="mobile_item_subtitle">оформление заказа одним касанием</div>
-                        <div class="mobile_item_plus"></div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4">
-                    <div class="mobile_item mobile_item_2">
-                        <div class="mobile_item_subtitle">надежная подача</div>
-                        <div class="mobile_item_plus"></div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4">
-                    <div class="mobile_item mobile_item_3">
-                        <div class="mobile_item_subtitle">прозрачные цены</div>
-                        <div class="mobile_item_plus"></div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4">
-                    <div class="mobile_item mobile_item_4">
-                        <div class="mobile_item_subtitle">безналичная оплата</div>
-                        <div class="mobile_item_plus"></div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4">
-                    <div class="mobile_item mobile_item_5">
-                        <div class="mobile_item_subtitle">обратная связь</div>
-                        <div class="mobile_item_plus"></div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4">
-                    <div class="mobile_item mobile_item_6">
-                        <div class="mobile_item_subtitle">разделить стоимость поездки</div>
-                        <div class="mobile_item_plus"></div>
-                    </div>
-                </div>
+				<!-- generate in js -->
             </div>
         </div>
     </section>
